--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,9 +5,60 @@
     padding: 0px;
 }
 
-body{
-    background-image:url(/imagens/fundo-madeira.jpg);
+html, body{
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+        background-image:url(/imagens/fundo-madeira.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-position: top center;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+}
+
+#telefone{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 627px;
+    width: 311px;
+    background-image: url('../imagens/frame-iphone.png');
+    background-repeat: no-repeat;
+}
+
+#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    height: 471px;
+    width: 267px;
+}
+
+#redes-sociais{
+    text-align: end;
+
+}
+
+a >  img{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    margin-bottom: 4px;
+    margin-right: 10px;
+    margin-top: 15px;
+    box-shadow: 2px 2px 5px black;
+    box-sizing: border-box;
+}
+
+a > img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.653);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.616);
+    transition: transsform .3s, borde 1s ;
 }
